# graph_star

./: .gitignore  README.md  prek.toml  pyproject.toml  requirements-dev.txt  requirements.txt
.claude/: settings.local.json
.github/workflows/: test.yml
src/graph_star/: __init__.py  allocation.py  allocation_runner.py  mixed_allocation.py  semantic_allocation.py
tests/: allocation_runner_test.py  conftest.py  mixed_allocation_test.py  test_allocation.py  test_allocation_runner.py  test_semantic_allocation.py
